Intermediate commit (cleaned up TransactionTest)